--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AocSolutionHub"
-             StartupUri="Mvvm/Views/MainWindow.xaml">
+             StartupUri="Mvvm/Views/MainWindow.xaml"
+             ThemeMode="Dark">
     <Application.Resources>
          
     </Application.Resources>
