--- a/Mvvm/Views/2025/Day2View.xaml
+++ b/Mvvm/Views/2025/Day2View.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AocSolutionHub.Mvvm.Views._2025"
-             mc:Ignorable="d" 
-             Background="White"
+             mc:Ignorable="d"
+             d:Background="White"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="48">
