--- a/Mvvm/Views/MainWindow.xaml
+++ b/Mvvm/Views/MainWindow.xaml
@@ -5,20 +5,26 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AocSolutionHub.Mvvm.Views"
         xmlns:_2025="clr-namespace:AocSolutionHub.Mvvm.Views._2025"
+        xmlns:converters="clr-namespace:AocSolutionHub.Converters" 
+        xmlns:viewmodels="clr-namespace:AocSolutionHub.Mvvm.ViewModels" 
+        d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowVM}"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <converters:SelectedYearConverter x:Key="SelectedYearConverter" />
+        <converters:SelectedDayConverter x:Key="SelectedDayConverter" />
+    </Window.Resources>
     <Grid>
 
         <TabControl TabStripPlacement="Left">
 
-            <TabItem Header="2024">
-            </TabItem>
-            <TabItem Header="2025" IsSelected="True">
+            <TabItem Header="2024" IsSelected="{Binding Year, Converter={StaticResource SelectedYearConverter}, ConverterParameter=2024}"/>
+            <TabItem Header="2025" IsSelected="{Binding Year, Converter={StaticResource SelectedYearConverter}, ConverterParameter=2025}" d:IsSelected="True">
                 <TabControl TabStripPlacement="Left">
-                    <TabItem Header="Day 1">
+                    <TabItem Header="Day 1" IsSelected="{Binding Day, Converter={StaticResource SelectedDayConverter}, ConverterParameter=1}" d:IsSelected="True">
                         <_2025:Day1View/>
                     </TabItem>
-                    <TabItem Header="Day 2">
+                    <TabItem Header="Day 2" IsSelected="{Binding Day, Converter={StaticResource SelectedDayConverter}, ConverterParameter=2}">
                         <_2025:Day2View/>
                     </TabItem>
                 </TabControl>
