--- a/Aoc.Ui/Mvvm/Views/2025/Day2View.xaml
+++ b/Aoc.Ui/Mvvm/Views/2025/Day2View.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="AocSolutionHub.Mvvm.Views._2025.Day2View"
+﻿<UserControl x:Class="Aoc.Ui.Mvvm.Views._2025.Day2View"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:AocSolutionHub.Mvvm.Views._2025"
+             xmlns:local="clr-namespace:Aoc.Ui.Mvvm.Views._2025"
              mc:Ignorable="d"
              d:Background="White"
              d:DesignHeight="450" d:DesignWidth="800">
