--- a/Aoc.Ui/Mvvm/Views/MainWindow.xaml
+++ b/Aoc.Ui/Mvvm/Views/MainWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="AocSolutionHub.Mvvm.Views.MainWindow"
+﻿<Window x:Class="Aoc.Ui.Mvvm.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AocSolutionHub.Mvvm.Views"
-        xmlns:_2025="clr-namespace:AocSolutionHub.Mvvm.Views._2025"
-        xmlns:converters="clr-namespace:AocSolutionHub.Converters" 
-        xmlns:viewmodels="clr-namespace:AocSolutionHub.Mvvm.ViewModels" 
+        xmlns:local="clr-namespace:Aoc.Ui.Mvvm.Views"
+        xmlns:_2025="clr-namespace:Aoc.Ui.Mvvm.Views._2025"
+        xmlns:_2024="clr-namespace:Aoc.Ui.Mvvm.Views._2024"
+        xmlns:converters="clr-namespace:Aoc.Ui.Converters" 
+        xmlns:viewmodels="clr-namespace:Aoc.Ui.Mvvm.ViewModels" 
         d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowVM}"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
@@ -18,7 +19,13 @@
 
         <TabControl TabStripPlacement="Left">
 
-            <TabItem Header="2024" IsSelected="{Binding Year, Converter={StaticResource SelectedYearConverter}, ConverterParameter=2024}"/>
+            <TabItem Header="2024" IsSelected="{Binding Year, Converter={StaticResource SelectedYearConverter}, ConverterParameter=2024}">
+                <TabControl TabStripPlacement="Left">
+                    <TabItem Header="Day 1" IsSelected="{Binding Day, Converter={StaticResource SelectedDayConverter}, ConverterParameter=1}">
+                        <_2024:Day1View/>
+                    </TabItem>
+                </TabControl>
+            </TabItem>
             <TabItem Header="2025" IsSelected="{Binding Year, Converter={StaticResource SelectedYearConverter}, ConverterParameter=2025}" d:IsSelected="True">
                 <TabControl TabStripPlacement="Left">
                     <TabItem Header="Day 1" IsSelected="{Binding Day, Converter={StaticResource SelectedDayConverter}, ConverterParameter=1}" d:IsSelected="True">
