--- a/Aoc.Ui/Mvvm/Views/2024/Day1View.xaml
+++ b/Aoc.Ui/Mvvm/Views/2024/Day1View.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Aoc.Ui.Mvvm.Views._2024.Day1View"
+﻿<Page x:Class="Aoc.Ui.Mvvm.Views._2024.Day1View"
                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -28,4 +28,4 @@
 
         <Button Width="80" Grid.Column="3" Grid.Row="1" Height="50" Command="{Binding SolveCommand}" Content="Solve!" />
     </Grid>
-</UserControl>
+</Page>
