--- a/Aoc.Ui/Mvvm/Views/2025/Day1View.xaml
+++ b/Aoc.Ui/Mvvm/Views/2025/Day1View.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Aoc.Ui.Mvvm.Views._2025.Day1View"
+﻿<Page x:Class="Aoc.Ui.Mvvm.Views._2025.Day1View"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -60,4 +60,4 @@
         <Button Width="150" Grid.Row="4" Height="30" Command="{Binding SolveCommand}" Content="Solve!" HorizontalAlignment="Center" />
 
     </Grid>
-</UserControl>
+</Page>
