--- a/Aoc.Ui/Mvvm/Views/2025/Day2View.xaml
+++ b/Aoc.Ui/Mvvm/Views/2025/Day2View.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Aoc.Ui.Mvvm.Views._2025.Day2View"
+﻿<Page x:Class="Aoc.Ui.Mvvm.Views._2025.Day2View"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,4 +12,4 @@
             Day 2, aww yeah!
         </Label>
     </Grid>
-</UserControl>
+</Page>
