--- a/Aoc.Ui/Mvvm/Views/MainWindow.xaml
+++ b/Aoc.Ui/Mvvm/Views/MainWindow.xaml
@@ -6,37 +6,46 @@
         xmlns:local="clr-namespace:Aoc.Ui.Mvvm.Views"
         xmlns:_2025="clr-namespace:Aoc.Ui.Mvvm.Views._2025"
         xmlns:_2024="clr-namespace:Aoc.Ui.Mvvm.Views._2024"
+        xmlns:enums="clr-namespace:Aoc.Ui.Enums"
         xmlns:converters="clr-namespace:Aoc.Ui.Converters" 
+        xmlns:selectors="clr-namespace:Aoc.Ui.DataTemplateSelectors"
         xmlns:viewmodels="clr-namespace:Aoc.Ui.Mvvm.ViewModels" 
         d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowVM}"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
-        <converters:SelectedYearConverter x:Key="SelectedYearConverter" />
-        <converters:SelectedDayConverter x:Key="SelectedDayConverter" />
+        <local:LandingPage x:Key="LandingPage" />
+
+        <_2024:Day1View x:Key="Year2024Day1Page" />
+        
+        <_2025:Day1View x:Key="Year2025Day1Page" />
+        <_2025:Day2View x:Key="Year2025Day2Page" />
+
+        <converters:PageCodeToPageConverter x:Key="PageCodeToPageConverter"
+                                            LandingPage="{StaticResource ResourceKey=LandingPage}"
+                                            Year2024Day1Page="{StaticResource ResourceKey=Year2024Day1Page}"
+                                            Year2025Day1Page="{StaticResource ResourceKey=Year2025Day1Page}"
+                                            Year2025Day2Page="{StaticResource ResourceKey=Year2025Day2Page}" />
+        <converters:PageCodeToBooleanConverter x:Key="PageCodeToBooleanConverter" />
+
+        <selectors:ViewDataTemplateSelector x:Key="ViewDataTemplateSelector" />
     </Window.Resources>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        
+        <TreeView>
+            <TreeViewItem Header="2024">
+                <TreeViewItem Header="Day 1" IsSelected="{Binding ActivePageCode, Converter={StaticResource PageCodeToBooleanConverter}, ConverterParameter={x:Static enums:PageCode.Year2024Day1}}" />
+            </TreeViewItem>
+            <TreeViewItem Header="2025">
+                <TreeViewItem Header="Day 1" IsSelected="{Binding ActivePageCode, Converter={StaticResource PageCodeToBooleanConverter}, ConverterParameter={x:Static enums:PageCode.Year2025Day1}}" />
+                <TreeViewItem Header="Day 2" IsSelected="{Binding ActivePageCode, Converter={StaticResource PageCodeToBooleanConverter}, ConverterParameter={x:Static enums:PageCode.Year2025Day2}}" />
+            </TreeViewItem>
+        </TreeView>
 
-        <TabControl TabStripPlacement="Left">
-
-            <TabItem Header="2024" IsSelected="{Binding Year, Converter={StaticResource SelectedYearConverter}, ConverterParameter=2024}">
-                <TabControl TabStripPlacement="Left">
-                    <TabItem Header="Day 1" IsSelected="{Binding Day, Converter={StaticResource SelectedDayConverter}, ConverterParameter=1}">
-                        <_2024:Day1View/>
-                    </TabItem>
-                </TabControl>
-            </TabItem>
-            <TabItem Header="2025" IsSelected="{Binding Year, Converter={StaticResource SelectedYearConverter}, ConverterParameter=2025}" d:IsSelected="True">
-                <TabControl TabStripPlacement="Left">
-                    <TabItem Header="Day 1" IsSelected="{Binding Day, Converter={StaticResource SelectedDayConverter}, ConverterParameter=1}" d:IsSelected="True">
-                        <_2025:Day1View/>
-                    </TabItem>
-                    <TabItem Header="Day 2" IsSelected="{Binding Day, Converter={StaticResource SelectedDayConverter}, ConverterParameter=2}">
-                        <_2025:Day2View/>
-                    </TabItem>
-                </TabControl>
-
-            </TabItem>
-        </TabControl>
+        <Frame Grid.Column="1" NavigationUIVisibility="Hidden" Content="{Binding ActivePageCode, Converter={StaticResource PageCodeToPageConverter}}" />
     </Grid>
 </Window>
